// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrSurface > applies background property 1`] = `
<div
  class="cdr-surface"
  data-background="primary"
>
  
  
</div>
`;

exports[`CdrSurface > applies border color property 1`] = `
<div
  class="cdr-surface"
  data-border-color="primary"
>
  
  
</div>
`;

exports[`CdrSurface > applies border style property 1`] = `
<div
  class="cdr-surface"
  data-border-style="solid"
>
  
  
</div>
`;

exports[`CdrSurface > applies border width property 1`] = `
<div
  class="cdr-surface"
  data-border-width="one-x"
>
  
  
</div>
`;

exports[`CdrSurface > applies box shadow property 1`] = `
<div
  class="cdr-surface"
  data-box-shadow="raised"
>
  
  
</div>
`;

exports[`CdrSurface > applies loading state 1`] = `
<div
  class="cdr-surface"
  data-loading="true"
>
  
  
</div>
`;

exports[`CdrSurface > applies multiple properties 1`] = `
<div
  class="cdr-surface"
  data-background="secondary"
  data-border-color="primary"
  data-border-style="solid"
  data-border-width="one-x"
  data-box-shadow="raised"
  data-radius="soft"
>
  
  
</div>
`;

exports[`CdrSurface > applies palette property 1`] = `
<div
  class="cdr-surface"
  data-background="primary"
  data-palette="membership-subtle"
>
  
  
</div>
`;

exports[`CdrSurface > applies radius property 1`] = `
<div
  class="cdr-surface"
  data-radius="soft"
>
  
  
</div>
`;

exports[`CdrSurface > applies state-specific properties 1`] = `
<div
  class="cdr-surface"
  data-background="primary"
  data-background-hover="secondary"
>
  
  
</div>
`;

exports[`CdrSurface > base classes only 1`] = `
<span
  class="cdr-surface"
>
  
  
</span>
`;

exports[`CdrSurface > default snapshot 1`] = `
<div
  class="cdr-surface"
>
  
  
</div>
`;

exports[`CdrSurface > shows default slot 1`] = `
<div
  class="cdr-surface"
>
  
  Default slot
  
</div>
`;
